set fonts in kitty using symbol map for nerd font patching

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,180 +6,73 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      BerkeleyMono Nerd Font
-# font_family      MonoLisa Nerd Font
+# font_family      Berkeley Mono
+# font_size        16.0
+
+font_family      MonoLisa
+font_size        15.0
+
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
 
-#: You can specify different fonts for the bold/italic/bold-italic
-#: variants. To get a full list of supported fonts use the `kitty
-#: +list-fonts` command. By default they are derived automatically, by
-#: the OSes font system. When bold_font or bold_italic_font is set to
-#: auto on macOS, the priority of bold fonts is semi-bold, bold,
-#: heavy. Setting them manually is useful for font families that have
-#: many weight variants like Book, Medium, Thick, etc. For example::
-
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
-
-font_size 16.0
-
-#: Font size (in pts)
-
-# force_ltr no
-
-#: kitty does not support BIDI (bidirectional text), however, for RTL
-#: scripts, words are automatically displayed in RTL. That is to say,
-#: in an RTL script, the words "HELLO WORLD" display in kitty as
-#: "WORLD HELLO", and if you try to select a substring of an RTL-
-#: shaped string, you will get the character that would be there had
-#: the the string been LTR. For example, assuming the Hebrew word
-#: ירושלים, selecting the character that on the screen appears to be ם
-#: actually writes into the selection buffer the character י.  kitty's
-#: default behavior is useful in conjunction with a filter to reverse
-#: the word order, however, if you wish to manipulate RTL glyphs, it
-#: can be very challenging to work with, so this option is provided to
-#: turn it off. Furthermore, this option can be used with the command
-#: line program GNU FriBidi
-#: <https://github.com/fribidi/fribidi#executable> to get BIDI
-#: support, because it will force kitty to always treat the text as
-#: LTR, which FriBidi expects for terminals.
-
-adjust_line_height  130%
+adjust_line_height  130% # essentially line-height: 1.3
 # adjust_column_width 0
-
-#: Change the size of each character cell kitty renders. You can use
-#: either numbers, which are interpreted as pixels or percentages
-#: (number followed by %), which are interpreted as percentages of the
-#: unmodified values. You can use negative pixels or percentages less
-#: than 100% to reduce sizes (but this might cause rendering
-#: artifacts).
-
 # adjust_baseline 0
-
-#: Adjust the vertical alignment of text (the height in the cell at
-#: which text is positioned). You can use either numbers, which are
-#: interpreted as pixels or a percentages (number followed by %),
-#: which are interpreted as the percentage of the line height. A
-#: positive value moves the baseline up, and a negative value moves
-#: them down. The underline and strikethrough positions are adjusted
-#: accordingly.
-
-# symbol_map
-
-#: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-
-#: Map the specified unicode codepoints to a particular font. Useful
-#: if you need special rendering for some symbols, such as for
-#: Powerline. Avoids the need for patched fonts. Each unicode code
-#: point is specified in the form U+<code point in hexadecimal>. You
-#: can specify multiple code points, separated by commas and ranges
-#: separated by hyphens. symbol_map itself can be specified multiple
-#: times. Syntax is::
-
-#:     symbol_map codepoints Font Family Name
-
-# narrow_symbols
-
-#: E.g. narrow_symbols U+E0A0-U+E0A3,U+E0C0-U+E0C7 1
-
-#: Usually, for Private Use Unicode characters and some symbol/dingbat
-#: characters, if the character is followed by one or more spaces,
-#: kitty will use those extra cells to render the character larger, if
-#: the character in the font has a wide aspect ratio. Using this
-#: setting you can force kitty to restrict the specified code points
-#: to render in the specified number of cells (defaulting to one
-#: cell). Syntax is::
-
-#:     narrow_symbols codepoints Optionally the number of cells
 
 disable_ligatures always
 
-#: Choose how you want to handle multi-character ligatures. The
-#: default is to always render them.  You can tell kitty to not render
-#: them when the cursor is over them by using cursor to make editing
-#: easier, or have kitty never render them at all by using always, if
-#: you don't like them. The ligature strategy can be set per-window
-#: either using the kitty remote control facility or by defining
-#: shortcuts for it in kitty.conf, for example::
-
-#:     map alt+1 disable_ligatures_in active always
-#:     map alt+2 disable_ligatures_in all never
-#:     map alt+3 disable_ligatures_in tab cursor
-
-#: Note that this refers to programming ligatures, typically
-#: implemented using the calt OpenType feature. For disabling general
-#: ligatures, use the font_features setting.
 
 # font_features
 
 # disable_ligatures didn't seem to work, so we have to override it specifically for this font
-font_features MonoLisaNerdFontComplete-Regular -liga -calt
+font_features MonoLisa -liga -calt
 
-#: Choose exactly which OpenType features to enable or disable. This
-#: is useful as some fonts might have features worthwhile in a
-#: terminal. For example, Fira Code Retina includes a discretionary
-#: feature, zero, which in that font changes the appearance of the
-#: zero (0), to make it more easily distinguishable from Ø. Fira Code
-#: Retina also includes other discretionary features known as
-#: Stylistic Sets which have the tags ss01 through ss20.
+# symbol_map
+###########################################################
+# Symbols Nerd Font complete symbol_map
+# easily troubleshoot missing/incorrect characters with:
+#   kitty --debug-font-fallback
+###########################################################
 
-#: For the exact syntax to use for individual features, see the
-#: Harfbuzz documentation <https://harfbuzz.github.io/harfbuzz-hb-
-#: common.html#hb-feature-from-string>.
+# "Nerd Fonts - Pomicons"
+symbol_map  U+E000-U+E00D Symbols Nerd Font
 
-#: Note that this code is indexed by PostScript name, and not the font
-#: family. This allows you to define very precise feature settings;
-#: e.g. you can disable a feature in the italic font but not in the
-#: regular font.
+# "Nerd Fonts - Powerline"
+symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font
 
-#: On Linux, these are read from the FontConfig database first and
-#: then this, setting is applied, so they can be configured in a
-#: single, central place.
+# "Nerd Fonts - Powerline Extra"
+symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font
 
-#: To get the PostScript name for a font, use kitty +list-fonts
-#: --psnames:
+# "Nerd Fonts - Symbols original"
+symbol_map U+e5fa-U+e62b Symbols Nerd Font
 
-#: .. code-block:: sh
+# "Nerd Fonts - Devicons"
+symbol_map U+e700-U+e7c5 Symbols Nerd Font
 
-#:     $ kitty +list-fonts --psnames | grep Fira
-#:     Fira Code
-#:     Fira Code Bold (FiraCode-Bold)
-#:     Fira Code Light (FiraCode-Light)
-#:     Fira Code Medium (FiraCode-Medium)
-#:     Fira Code Regular (FiraCode-Regular)
-#:     Fira Code Retina (FiraCode-Retina)
+# "Nerd Fonts - Font awesome"
+symbol_map U+f000-U+f2e0 Symbols Nerd Font
 
-#: The part in brackets is the PostScript name.
+# "Nerd Fonts - Font awesome extension"
+symbol_map U+e200-U+e2a9 Symbols Nerd Font
 
-#: Enable alternate zero and oldstyle numerals::
+# "Nerd Fonts - Octicons"
+symbol_map U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c Symbols Nerd Font
 
-#:     font_features FiraCode-Retina +zero +onum
+# "Nerd Fonts - Font Linux"
+symbol_map U+F300-U+F313 Symbols Nerd Font
 
-#: Enable only alternate zero::
+#  Nerd Fonts - Font Power Symbols"
+symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font
 
-#:     font_features FiraCode-Retina +zero
+#  "Nerd Fonts - Material Design Icons"
+symbol_map U+f500-U+fd46 Symbols Nerd Font
 
-#: Disable the normal ligatures, but keep the calt feature which (in
-#: this font) breaks up monotony::
+# "Nerd Fonts - Weather Icons"
+symbol_map U+e300-U+e3eb Symbols Nerd Font
 
-#:     font_features TT2020StyleB-Regular -liga +calt
-
-#: In conjunction with force_ltr, you may want to disable Arabic
-#: shaping entirely, and only look at their isolated forms if they
-#: show up in a document. You can do this with e.g.::
-
-#:     font_features UnifontMedium +isol -medi -fina -init
-
-# box_drawing_scale 0.001, 1, 1.5, 2
-
-#: Change the sizes of the lines used for the box drawing unicode
-#: characters These values are in pts. They will be scaled by the
-#: monitor DPI to arrive at a pixel value. There must be four values
-#: corresponding to thin, normal, thick, and very thick lines.
+# Misc Code Point Fixes
+symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbols Nerd Font
 
 #: }}}
 
@@ -2121,60 +2014,3 @@ color16 #ff9e64
 color17 #db4b4b
   
 # End Tokyonight Theme  
-
-# =======================
-# =======================
-
-# # Begin Gruvbox-material theme
-
-# background #282828
-# foreground #d4be98
-
-# selection_background #d4be98
-# selection_foreground #282828
-
-# cursor #a89984
-# cursor_text_color background
-
-# active_tab_background #282828
-# active_tab_foreground #d4be98
-# active_tab_font_style bold
-# inactive_tab_background #282828
-# inactive_tab_foreground #a89984
-# inactive_tab_font_style normal
-# tab_bar_background #1d1d1d
-# macos_titlebar_color #1d1d1d
-
-# # Black
-# color0 #665c54
-# color8 #928374
-
-# # Red
-# color1 #ea6962
-# color9 #ea6962
-
-# # Green
-# color2 #a9b665
-# color10 #a9b665
-
-# # Yellow
-# color3 #e78a4e
-# color11 #d8a657
-
-# # Blue
-# color4 #7daea3
-# color12 #7daea3
-
-# # Magenta
-# color5 #d3869b
-# color13 #d3869b
-
-# # Cyan
-# color6 #89b482
-# color14 #89b482
-
-# # White
-# color7 #d4be98
-# color15 #d4be98
-
-# # end Gruvbox-material
