--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -16,9 +16,9 @@ font_size        15.0
 # italic_font      auto
 # bold_italic_font auto
 
-adjust_line_height  130% # essentially line-height: 1.3
-# adjust_column_width 0
-# adjust_baseline 0
+adjust_line_height  130%
+adjust_column_width 0
+adjust_baseline 0
 
 disable_ligatures always
 
