switch back to berkeley mono

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,11 +6,11 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      Berkeley Mono
-# font_size        16.0
+font_family      Berkeley Mono
+font_size        16.0
 
-font_family      MonoLisa
-font_size        15.0
+# font_family      MonoLisa
+# font_size        15.0
 
 # bold_font        auto
 # italic_font      auto
