update all git checkout references to be git switch

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,8 +8,8 @@
 [alias]
     g = git
     c = commit -am
-    co = checkout
-    bc = checkout -b
+    co = switch
+    bc = switch -c
     bx = branch -D
     ba = branch --all
     cmsg = commit -m
