update highlighting in tmux, kitty, and neovim to be super legible

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,7 @@ set -s escape-time 0
 #------------------------------
 # TokyoNight colors for Tmux
 #------------------------------
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+set -g mode-style "fg=#1f2335,bg=#e0af68"
 
 set -g message-style "fg=#1a1b26,bg=#e0af68"
 set -g message-command-style "fg=#1a1b26,bg=#e0af68"
