--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1975,8 +1975,8 @@ macos_thicken_font 0.75
 
 background #1a1b26
 foreground #c0caf5
-selection_background #33467c
-selection_foreground #c0caf5
+selection_background #ff9e64
+selection_foreground #1a1b26
 url_color #73daca
 cursor #c0caf5
 cursor_text_color #1a1b26
