make tmux theme like the catppuccin one

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,41 +5,72 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # don't add a delay when pressing escape
 set -s escape-time 0
 
+# theme
+thm_fg="#c0caf5"
+thm_bg="#1f2335"
+thm_black="#1f2335"
+thm_black4="#565f89"
+thm_gray="#3b4261"
+thm_red="#f7768e"
+thm_orange="#ff9e64"
+thm_yellow="#e0af68"
+thm_green="#9ece6a"
+thm_cyan="#73daca"
+thm_blue="#7aa2f7"
+thm_purple="#9d7cd8"
+thm_pink="#bb9af7"
+
+# status
+set -gq status "on"
+set -gq status-bg "${thm_bg}"
+set -gq status-justify "left"
+set -gq status-left-length "100"
+set -gq status-right-length "100"
+
+# messages
+set -gq message-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+set -gq message-command-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+
+# panes
+set -gq pane-border-style "fg=${thm_gray}"
+set -gq pane-active-border-style "fg=${thm_blue}"
+
+# windows
+setw -gq window-status-activity-style "fg=${thm_fg},bg=${thm_bg},none"
+setw -gq window-status-separator ""
+setw -gq window-status-style "fg=${thm_fg},bg=${thm_bg},none"
+
+# --------=== Statusline
+
+wt_enabled="off"
+right_separator="█"
+left_separator="█"
+
+# current directory name
+right_column1="#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$thm_bg,bg=$thm_pink,nobold,nounderscore,noitalics]  #[fg=$thm_fg,bg=$thm_gray] #{b:pane_current_path} "
+
+# current session name
+right_column2="#[fg=$thm_cyan,bg=$thm_gray]$right_separator#[fg=$thm_bg,bg=$thm_cyan,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #S "
+
+# inactive window
+window_status_format="#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_bg] #W "
+
+# active window
+window_status_current_format="#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_gray] #W "
+
+set status-left ""
+
+set status-right "${right_column1}${right_column2}"
+
+setw window-status-format "${window_status_format}"
+setw window-status-current-format "${window_status_current_format}"
+
+# --------=== Modes
+#
+setw clock-mode-colour "${thm_blue}"
+setw mode-style "fg=${thm_pink} bg=${thm_black4} bold"
 #------------------------------
-# TokyoNight colors for Tmux
-#------------------------------
-set -g mode-style "fg=#1f2335,bg=#e0af68"
-
-set -g message-style "fg=#1a1b26,bg=#e0af68"
-set -g message-command-style "fg=#1a1b26,bg=#e0af68"
-
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
-
-set -g status "on"
-set -g status-justify "left"
-
-set -g status-style "fg=#7aa2f7,bg=#1f2335"
-
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1d202f,bg=#7aa2f7,bold] %I:%M %p "
-
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
-
-# tmux-plugins/tmux-prefix-highlight support
-set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#1f2335]#[fg=#1f2335]#[bg=#e0af68]"
-#------------------------------
-# End TokyoNight colors
+# End theme
 #------------------------------
 
 # Undercurl
