tweak tokyonight colors and tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,17 +58,13 @@ window_status_format="#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_bg] #W 
 # active window
 window_status_current_format="#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_gray] #W "
 
-set status-left ""
+set -gq status-left ""
 
-set status-right "${right_column1}${right_column2}"
+set -gq status-right "${right_column1}${right_column2}"
 
-setw window-status-format "${window_status_format}"
-setw window-status-current-format "${window_status_current_format}"
+setw -gq window-status-format "${window_status_format}"
+setw -gq window-status-current-format "${window_status_current_format}"
 
-# --------=== Modes
-#
-setw clock-mode-colour "${thm_blue}"
-setw mode-style "fg=${thm_pink} bg=${thm_black4} bold"
 #------------------------------
 # End theme
 #------------------------------
