source values from ~/.extras.fish, tweak tmux status line

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -21,8 +21,7 @@ success_symbol = "[](bold purple)"
 error_symbol = "[](bold red)"
 vicmd_symbol = "[](bold purple)"
 
-# only show current directory name
-# remove directory, and make it blue
+# only show current and parent directory
 [directory]
 truncation_length = 2
 style = "bright-blue"
