--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,10 +53,10 @@ right_column1="#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]$right_se
 right_column2="#[fg=$thm_cyan,bg=$thm_gray]$right_separator#[fg=$thm_bg,bg=$thm_cyan,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #S "
 
 # inactive window
-window_status_format="#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_bg] #W "
+window_status_format="#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_bg] #W#[fg=$thm_bg,bg=$thm_bg,nobold,nounderscore,noitalics]$right_separator"
 
 # active window
-window_status_current_format="#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_gray] #W "
+window_status_current_format="#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_gray] #W#[fg=$thm_gray,bg=$thm_gray,nobold,nounderscore,noitalics]$right_separator"
 
 set -gq status-left ""
 
