lots of updates and cleanup

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,11 +6,9 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Berkeley Mono
+# font_family      Berkeley Mono
+font_family      MonoLisa
 font_size        16.0
-
-# font_family      MonoLisa
-# font_size        15.0
 
 # bold_font        auto
 # italic_font      auto
@@ -22,11 +20,7 @@ adjust_baseline 0
 
 disable_ligatures always
 
-
 # font_features
-
-# disable_ligatures didn't seem to work, so we have to override it specifically for this font
-font_features MonoLisa -liga -calt
 
 # symbol_map
 ###########################################################
@@ -1222,7 +1216,7 @@ macos_option_as_alt no
 #: resizable on macOS. Changing this setting by reloading the config
 #: will only affect newly created windows.
 
-macos_thicken_font 0.75
+macos_thicken_font 0.5
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
@@ -1964,6 +1958,5 @@ macos_thicken_font 0.75
 #: }}}
 
 # BEGIN_KITTY_THEME
-# Tokyo Night
 include current-theme.conf
 # END_KITTY_THEME
