--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,19 +6,20 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # theme
-thm_fg="#c0caf5"
-thm_bg="#1f2335"
-thm_black="#1f2335"
-thm_black4="#565f89"
+thm_fg="#a8b5d1"
+thm_bg="#141820"
+thm_black="#1b212c"
+thm_black4="#506686"
 thm_gray="#3b4261"
-thm_red="#f7768e"
+thm_red="#ff5874"
 thm_orange="#ff9e64"
-thm_yellow="#e0af68"
-thm_green="#9ece6a"
-thm_cyan="#73daca"
-thm_blue="#7aa2f7"
-thm_purple="#9d7cd8"
+thm_yellow="#ffbf7a"
+thm_green="#6af699"
+thm_cyan="#4ff2f8"
+thm_blue="#82aaff"
+thm_purple="#a78bfa"
 thm_pink="#bb9af7"
+thm_active="#34febb"
 
 # status
 set -gq status "on"
@@ -47,7 +48,7 @@ right_separator="█"
 left_separator="█"
 
 # current directory name
-right_column1="#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$thm_bg,bg=$thm_pink,nobold,nounderscore,noitalics]  #[fg=$thm_fg,bg=$thm_gray] #{b:pane_current_path} "
+right_column1="#[fg=$thm_purple,bg=$thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$thm_bg,bg=$thm_purple,nobold,nounderscore,noitalics]  #[fg=$thm_fg,bg=$thm_gray] #{b:pane_current_path} "
 
 # current session name
 right_column2="#[fg=$thm_cyan,bg=$thm_gray]$right_separator#[fg=$thm_bg,bg=$thm_cyan,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #S "
@@ -56,7 +57,7 @@ right_column2="#[fg=$thm_cyan,bg=$thm_gray]$right_separator#[fg=$thm_bg,bg=$thm_
 window_status_format="#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_bg] #W#[fg=$thm_bg,bg=$thm_bg,nobold,nounderscore,noitalics]$right_separator"
 
 # active window
-window_status_current_format="#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_gray] #W#[fg=$thm_gray,bg=$thm_gray,nobold,nounderscore,noitalics]$right_separator"
+window_status_current_format="#[fg=$thm_bg,bg=$thm_active] #I #[fg=$thm_fg,bg=$thm_gray] #W#[fg=$thm_gray,bg=$thm_gray,nobold,nounderscore,noitalics]$right_separator"
 
 set -gq status-left ""
 
@@ -138,11 +139,15 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'fcsonline/tmux-thumbs'
 
 # plugin configs
 set -g @continuum-boot 'on' # have continuum boot up when computer restarts.
 set -g @continuum-restore 'on' # tell continuum to restore previous session.
 set -g @continuum-boot-options 'kitty' # tell tmux-continuum to start when computer starts. Tell it to use kitty.
+
+run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
