color tweaks, add legacy tag to fidget.nvim

--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -6,7 +6,7 @@
 ## upstream: https://github.com/electron-highlighter/kitty
 
 
-background #141820
+background #212836
 foreground #a8b5d1
 selection_background #283457
 selection_foreground #a8b5d1
@@ -27,7 +27,7 @@ inactive_border_color #292e42
 
 # normal
 color0 #15161e
-color1 #ff5874
+color1 #f7768e
 color2 #6af699
 color3 #ffbf7a
 color4 #82aaff
@@ -37,7 +37,7 @@ color7 #99a3b8
 
 # bright
 color8 #414868
-color9 #ff5874
+color9 #f7768e
 color10 #6af699
 color11 #ffbf7a
 color12 #82aaff
@@ -47,4 +47,4 @@ color15 #a8b5d1
 
 # extended colors
 color16 #ffbf7a
-color17 #ef4444
+color17 #ff5874
