--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,8 +7,8 @@ set -s escape-time 0
 
 # theme
 thm_fg="#a8b5d1"
-thm_bg="#141820"
-thm_black="#1b212c"
+thm_bg="#212836"
+thm_black="#141820"
 thm_black4="#506686"
 thm_gray="#3b4261"
 thm_red="#ff5874"
