use delta for git diffs

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -127,12 +127,12 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r k run-shell "~/.local/bin/tmux-sessionizer"
 
 # use zsh in tmux
-# set -g default-command /opt/homebrew/bin/zsh
-# set -g default-shell /opt/homebrew/bin/zsh
+set -g default-command /opt/homebrew/bin/zsh
+set -g default-shell /opt/homebrew/bin/zsh
 
 # use fish in tmux
-set -g default-command /opt/homebrew/bin/fish
-set -g default-shell /opt/homebrew/bin/fish
+# set -g default-command /opt/homebrew/bin/fish
+# set -g default-shell /opt/homebrew/bin/fish
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
