--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -17,9 +17,9 @@ format = """\
 
 # replace the prompt character
 [character]
-success_symbol = "[](bold purple)"
-error_symbol = "[](bold red)"
-vicmd_symbol = "[](bold purple)"
+success_symbol = "[❯](bold purple)"
+error_symbol = "[❯](bold red)"
+vicmd_symbol = "[❮](bold purple)"
 
 # only show current and parent directory
 [directory]
