--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,10 +54,10 @@ right_column1="#[fg=$thm_purple,bg=$thm_bg,nobold,nounderscore,noitalics]$right_
 right_column2="#[fg=$thm_cyan,bg=$thm_gray]$right_separator#[fg=$thm_bg,bg=$thm_cyan,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #S "
 
 # inactive window
-window_status_format="#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_bg] #W#[fg=$thm_bg,bg=$thm_bg,nobold,nounderscore,noitalics]$right_separator"
+window_status_format="#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_bg] #W "
 
 # active window
-window_status_current_format="#[fg=$thm_bg,bg=$thm_active] #I #[fg=$thm_fg,bg=$thm_gray] #W#[fg=$thm_gray,bg=$thm_gray,nobold,nounderscore,noitalics]$right_separator"
+window_status_current_format="#[fg=$thm_bg,bg=$thm_active] #I #[fg=$thm_fg,bg=$thm_gray] #W "
 
 set -gq status-left ""
 
@@ -127,12 +127,12 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r k run-shell "~/.local/bin/tmux-sessionizer"
 
 # use zsh in tmux
-set -g default-command /opt/homebrew/bin/zsh
-set -g default-shell /opt/homebrew/bin/zsh
+# set -g default-command /opt/homebrew/bin/zsh
+# set -g default-shell /opt/homebrew/bin/zsh
 
 # use fish in tmux
-# set -g default-command /opt/homebrew/bin/fish
-# set -g default-shell /opt/homebrew/bin/fish
+set -g default-command /opt/homebrew/bin/fish
+set -g default-shell /opt/homebrew/bin/fish
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
