--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -7,7 +7,7 @@
     },
     "buffer_font_family": "BerkeleyMono Nerd Font",
     "buffer_font_size": 16,
-    "theme": "One Dark",
+    "theme": "One Light",
     "format_on_save": "off",
     "soft_wrap": "editor_width",
     "vim_mode": false,
