--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,21 +5,23 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # don't add a delay when pressing escape
 set -s escape-time 0
 
-# theme
+# electron_highlighter theme
 thm_fg="#a8b5d1"
 thm_bg="#212836"
-thm_black="#141820"
-thm_black4="#506686"
 thm_gray="#3b4261"
-thm_red="#ff5874"
-thm_orange="#ff9e64"
-thm_yellow="#ffbf7a"
-thm_green="#6af699"
 thm_cyan="#4ff2f8"
 thm_blue="#82aaff"
 thm_purple="#a78bfa"
-thm_pink="#bb9af7"
 thm_active="#34febb"
+
+# tokyonight theme
+# thm_fg="#c0caf5"
+# thm_bg="#1a1b26"
+# thm_gray="#3b4261"
+# thm_cyan="#73daca"
+# thm_blue="#7aa2f7"
+# thm_purple="#9d7cd8"
+# thm_active="#73daca"
 
 # status
 set -gq status "on"
@@ -54,10 +56,10 @@ right_column1="#[fg=$thm_purple,bg=$thm_bg,nobold,nounderscore,noitalics]$right_
 right_column2="#[fg=$thm_cyan,bg=$thm_gray]$right_separator#[fg=$thm_bg,bg=$thm_cyan,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #S "
 
 # inactive window
-window_status_format="#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_bg] #W "
+window_status_format="#[fg=$thm_blue,bg=$thm_gray] #I #[fg=$thm_fg,bg=$thm_bg] #W "
 
 # active window
-window_status_current_format="#[fg=$thm_bg,bg=$thm_active] #I #[fg=$thm_fg,bg=$thm_gray] #W "
+window_status_current_format="#[fg=$thm_bg,bg=$thm_active] #I #[fg=$thm_fg,bg=$thm_bg] #W "
 
 set -gq status-left ""
 
