--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -124,6 +124,10 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+# don't confirm before deleting windows and panes.
+bind-key & kill-window
+bind-key x kill-pane
+
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r k run-shell "~/.local/bin/tmux-sessionizer"
