--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,50 +1,50 @@
 # vim:ft=kitty
 
-## name: Electron Highlighter
+## name: Tokyo Night
 ## license: MIT
-## author: Mike McBride
-## upstream: https://github.com/electron-highlighter/kitty
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
 
 
-background #212836
-foreground #a8b5d1
+background #1a1b26
+foreground #c0caf5
 selection_background #283457
-selection_foreground #a8b5d1
-url_color #4ff2f8
-cursor #a8b5d1
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
 cursor_text_color #1a1b26
 
 # Tabs
-active_tab_background #82aaff
+active_tab_background #7aa2f7
 active_tab_foreground #16161e
 inactive_tab_background #292e42
 inactive_tab_foreground #545c7e
 #tab_bar_background #15161e
 
 # Windows
-active_border_color #82aaff
+active_border_color #7aa2f7
 inactive_border_color #292e42
 
 # normal
 color0 #15161e
 color1 #f7768e
-color2 #6af699
-color3 #ffbf7a
-color4 #82aaff
-color5 #c792ea
-color6 #4ff2f8
-color7 #99a3b8
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
 
 # bright
 color8 #414868
 color9 #f7768e
-color10 #6af699
-color11 #ffbf7a
-color12 #82aaff
-color13 #c792ea
-color14 #4ff2f8
-color15 #a8b5d1
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
 
 # extended colors
-color16 #ffbf7a
-color17 #ff5874
+color16 #ff9e64
+color17 #db4b4b
