--- a/kitty/.config/kitty/electron-highlighter.conf
+++ b/kitty/.config/kitty/electron-highlighter.conf
@@ -6,7 +6,8 @@
 ## upstream: https://github.com/electron-highlighter/kitty
 
 
-background #212836
+# background #212836
+background #1a1b26
 foreground #a8b5d1
 selection_background #283457
 selection_foreground #a8b5d1
