--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,33 +7,33 @@ set -s escape-time 0
 
 # if-shell -b "[ $CURRENT_THEME = 'tokyonight' ]" {
     # tokyonight theme
-    thm_fg="#c0caf5"
-    thm_bg="#1a1b26"
-    thm_gray="#3b4261"
-    thm_cyan="#73daca"
-    thm_blue="#7aa2f7"
-    thm_purple="#9d7cd8"
-    thm_active="#73daca"
+    # thm_fg="#c0caf5"
+    # thm_bg="#1a1b26"
+    # thm_gray="#3b4261"
+    # thm_cyan="#73daca"
+    # thm_blue="#7aa2f7"
+    # thm_purple="#9d7cd8"
+    # thm_active="#73daca"
 # }
 # if-shell -b "[ $CURRENT_THEME = 'gruvbox' ]" {
     # gruvbox material theme
-    # thm_fg="#d4be98"
-    # thm_bg="#1d2021"
-    # thm_gray="#504945"
-    # thm_cyan="#89b482"
-    # thm_blue="#7daea3"
-    # thm_purple="#d3869b"
-    # thm_active="#e78a4e"
+    thm_fg="#d4be98"
+    thm_bg="#1d2021"
+    thm_gray="#504945"
+    thm_cyan="#89b482"
+    thm_blue="#7daea3"
+    thm_purple="#d3869b"
+    thm_active="#e78a4e"
 # }
 # if-shell -b "[ $CURRENT_THEME = 'electronhighlighter' ]" {
     # electron_highlighter theme
-#     thm_fg="#a8b5d1"
-#     thm_bg="#212836"
-#     thm_gray="#3b4261"
-#     thm_cyan="#4ff2f8"
-#     thm_blue="#82aaff"
-#     thm_purple="#a78bfa"
-#     thm_active="#34febb"
+    # thm_fg="#a8b5d1"
+    # thm_bg="#141820"
+    # thm_gray="#3b4261"
+    # thm_cyan="#4ff2f8"
+    # thm_blue="#82aaff"
+    # thm_purple="#a78bfa"
+    # thm_active="#34febb"
 # }
 
 # status
