--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,50 +1,47 @@
 # vim:ft=kitty
-
-## name: Tokyo Night
+## name: Gruvbox Material Dark Hard
+## author: Sainnhe Park
 ## license: MIT
-## author: Folke Lemaitre
-## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
+## upstream: https://raw.githubusercontent.com/rsaihe/gruvbox-material-kitty/main/colors/gruvbox-material-dark-hard.conf
+## blurb: A modified version of Gruvbox with softer contrasts
 
+background #1d2021
+foreground #d4be98
 
-background #1a1b26
-foreground #c0caf5
-selection_background #283457
-selection_foreground #c0caf5
-url_color #73daca
-cursor #c0caf5
-cursor_text_color #1a1b26
+selection_background #d4be98
+selection_foreground #1d2021
 
-# Tabs
-active_tab_background #7aa2f7
-active_tab_foreground #16161e
-inactive_tab_background #292e42
-inactive_tab_foreground #545c7e
-#tab_bar_background #15161e
+cursor #a89984
+cursor_text_color background
 
-# Windows
-active_border_color #7aa2f7
-inactive_border_color #292e42
+# Black
+color0 #665c54
+color8 #928374
 
-# normal
-color0 #15161e
-color1 #f7768e
-color2 #9ece6a
-color3 #e0af68
-color4 #7aa2f7
-color5 #bb9af7
-color6 #7dcfff
-color7 #a9b1d6
+# Red
+color1 #ea6962
+color9 #ea6962
 
-# bright
-color8 #414868
-color9 #f7768e
-color10 #9ece6a
-color11 #e0af68
-color12 #7aa2f7
-color13 #bb9af7
-color14 #7dcfff
-color15 #c0caf5
+# Green
+color2  #a9b665
+color10 #a9b665
 
-# extended colors
-color16 #ff9e64
-color17 #db4b4b
+# Yellow
+color3  #e78a4e
+color11 #d8a657
+
+# Blue
+color4  #7daea3
+color12 #7daea3
+
+# Magenta
+color5  #d3869b
+color13 #d3869b
+
+# Cyan
+color6  #89b482
+color14 #89b482
+
+# White
+color7  #d4be98
+color15 #d4be98
