--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -8,10 +8,7 @@ format = """\
   $directory\
   $git_branch\
   $git_status\
-  $nodejs\
-  $golang\
   $fill\
-  $kubernetes\
   $time\
   $line_break\
   $character\
@@ -40,8 +37,8 @@ format = "[$path ]($style)[$read_only]($read_only_style)"
 # show the time in the prompt
 [time]
 disabled = false
-style = "bright-black"
-time_format = "[%T] "
+style = "bright-black dimmed"
+time_format = "[%T]"
 format = "[$time]($style)"
 
 [git_branch]
@@ -49,14 +46,20 @@ style = "purple"
 symbol = " "
 
 [git_status]
-style = "yellow"
+style = "bright-yellow"
 deleted = "×"
 
 # remove bold styling from language prompts
 [golang]
 style = "cyan"
 symbol = " "
+format = '[$symbol$version]($style) '
 
 [nodejs]
 style = "bright-green"
 symbol = " "
+format = '[$symbol$version]($style) '
+
+[kubernetes]
+disabled = false
+format = '[$symbol$context]($style)'
