--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,47 +1,50 @@
 # vim:ft=kitty
-## name: Gruvbox Material Dark Hard
-## author: Sainnhe Park
+
+## name: Electron Highlighter
 ## license: MIT
-## upstream: https://raw.githubusercontent.com/rsaihe/gruvbox-material-kitty/main/colors/gruvbox-material-dark-hard.conf
-## blurb: A modified version of Gruvbox with softer contrasts
+## author: Mike McBride
+## upstream: https://github.com/electron-highlighter/kitty
 
-background #1d2021
-foreground #d4be98
 
-selection_background #d4be98
-selection_foreground #1d2021
+background #141820
+foreground #a8b5d1
+selection_background #283457
+selection_foreground #a8b5d1
+url_color #4ff2f8
+cursor #a8b5d1
+cursor_text_color #1a1b26
 
-cursor #a89984
-cursor_text_color background
+# Tabs
+active_tab_background #82aaff
+active_tab_foreground #16161e
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #15161e
 
-# Black
-color0 #665c54
-color8 #928374
+# Windows
+active_border_color #82aaff
+inactive_border_color #292e42
 
-# Red
-color1 #ea6962
-color9 #ea6962
+# normal
+color0 #15161e
+color1 #f7768e
+color2 #6af699
+color3 #ffbf7a
+color4 #82aaff
+color5 #c792ea
+color6 #4ff2f8
+color7 #99a3b8
 
-# Green
-color2  #a9b665
-color10 #a9b665
+# bright
+color8 #414868
+color9 #f7768e
+color10 #6af699
+color11 #ffbf7a
+color12 #82aaff
+color13 #c792ea
+color14 #4ff2f8
+color15 #a8b5d1
 
-# Yellow
-color3  #e78a4e
-color11 #d8a657
-
-# Blue
-color4  #7daea3
-color12 #7daea3
-
-# Magenta
-color5  #d3869b
-color13 #d3869b
-
-# Cyan
-color6  #89b482
-color14 #89b482
-
-# White
-color7  #d4be98
-color15 #d4be98
+# extended colors
+color16 #ffbf7a
+color17 #ff5874
