--- a/kitty/.config/kitty/electron-highlighter.conf
+++ b/kitty/.config/kitty/electron-highlighter.conf
@@ -6,8 +6,7 @@
 ## upstream: https://github.com/electron-highlighter/kitty
 
 
-# background #212836
-background #1a1b26
+background #141820
 foreground #a8b5d1
 selection_background #283457
 selection_foreground #a8b5d1
