--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,56 +5,46 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # don't add a delay when pressing escape
 set -s escape-time 0
 
-# if-shell -b "[ $CURRENT_THEME = 'tokyonight' ]" {
-    # tokyonight theme
-    # thm_fg="#c0caf5"
-    # thm_bg="#1a1b26"
-    # thm_gray="#3b4261"
-    # thm_cyan="#73daca"
-    # thm_blue="#7aa2f7"
-    # thm_purple="#9d7cd8"
-    # thm_active="#73daca"
-# }
 # if-shell -b "[ $CURRENT_THEME = 'gruvbox' ]" {
     # gruvbox material theme
-    thm_fg="#d4be98"
-    thm_bg="#1d2021"
-    thm_gray="#504945"
-    thm_cyan="#89b482"
-    thm_blue="#7daea3"
-    thm_purple="#d3869b"
-    thm_active="#e78a4e"
+    # tmux_thm_fg="#d4be98"
+    # tmux_thm_bg="#1d2021"
+    # tmux_thm_gray="#504945"
+    # tmux_thm_cyan="#89b482"
+    # tmux_thm_blue="#7daea3"
+    # tmux_thm_purple="#d3869b"
+    # tmux_thm_active="#e78a4e"
 # }
 # if-shell -b "[ $CURRENT_THEME = 'electronhighlighter' ]" {
     # electron_highlighter theme
-    # thm_fg="#a8b5d1"
-    # thm_bg="#141820"
-    # thm_gray="#3b4261"
-    # thm_cyan="#4ff2f8"
-    # thm_blue="#82aaff"
-    # thm_purple="#a78bfa"
-    # thm_active="#34febb"
+    tmux_thm_fg="#a8b5d1"
+    tmux_thm_bg="#141820"
+    tmux_thm_gray="#3b4261"
+    tmux_thm_cyan="#4ff2f8"
+    tmux_thm_blue="#82aaff"
+    tmux_thm_purple="#a78bfa"
+    tmux_thm_active="#34febb"
 # }
 
 # status
 set -gq status "on"
-set -gq status-bg "${thm_bg}"
+set -gq status-bg "${tmux_thm_bg}"
 set -gq status-justify "left"
 set -gq status-left-length "100"
 set -gq status-right-length "100"
 
 # messages
-set -gq message-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
-set -gq message-command-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+set -gq message-style "fg=${tmux_thm_cyan},bg=${tmux_thm_gray},align=centre"
+set -gq message-command-style "fg=${tmux_thm_cyan},bg=${tmux_thm_gray},align=centre"
 
 # panes
-set -gq pane-border-style "fg=${thm_gray}"
-set -gq pane-active-border-style "fg=${thm_blue}"
+set -gq pane-border-style "fg=${tmux_thm_gray}"
+set -gq pane-active-border-style "fg=${tmux_thm_blue}"
 
 # windows
-setw -gq window-status-activity-style "fg=${thm_fg},bg=${thm_bg},none"
+setw -gq window-status-activity-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
 setw -gq window-status-separator ""
-setw -gq window-status-style "fg=${thm_fg},bg=${thm_bg},none"
+setw -gq window-status-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
 
 # --------=== Statusline
 
@@ -63,20 +53,20 @@ right_separator="█"
 left_separator="█"
 
 # current directory name
-right_column1="#[fg=$thm_purple,bg=$thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$thm_bg,bg=$thm_purple,nobold,nounderscore,noitalics]  #[fg=$thm_fg,bg=$thm_gray] #{b:pane_current_path} "
+right_column1="#[fg=$tmux_thm_purple,bg=$tmux_thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$tmux_thm_bg,bg=$tmux_thm_purple,nobold,nounderscore,noitalics]  #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #{b:pane_current_path} "
 
 # current session name
-right_column2="#[fg=$thm_cyan,bg=$thm_gray]$right_separator#[fg=$thm_bg,bg=$thm_cyan,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #S "
+right_column2="#[fg=$tmux_thm_cyan,bg=$tmux_thm_gray]$right_separator#[fg=$tmux_thm_bg,bg=$tmux_thm_cyan,nobold,nounderscore,noitalics] #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #S "
 
 # inactive window
-window_status_format="#[fg=$thm_blue,bg=$thm_gray] #I #[fg=$thm_fg,bg=$thm_bg] #W "
+window_status_format="#[fg=$tmux_thm_blue,bg=$tmux_thm_gray] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
 
 # active window
-window_status_current_format="#[fg=$thm_bg,bg=$thm_active] #I #[fg=$thm_fg,bg=$thm_bg] #W "
+window_status_current_format="#[fg=$tmux_thm_bg,bg=$tmux_thm_active] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
 
 set -gq status-left ""
 
-set -gq status-right "${right_column1}${right_column2}"
+set -gq status-right "${right_column2}"
 
 setw -gq window-status-format "${window_status_format}"
 setw -gq window-status-current-format "${window_status_current_format}"
