--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,8 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Berkeley Mono
-# font_family      MonoLisa
+# font_family      Berkeley Mono
+font_family      MonoLisa
 font_size        16.0
 
 # bold_font        auto
@@ -593,7 +593,7 @@ cursor_blink_interval 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 2 8
+window_padding_width 2 4 0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
