--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -5,11 +5,12 @@ add_newline = false
 # add/remove $line_break\ before $character\ to get prompt character on same line as prompt
 
 format = """\
+  $time\
   $directory\
   $git_branch\
   $git_status\
-  $fill\
-  $time\
+  $golang\
+  $nodejs\
   $line_break\
   $character\
 """
@@ -29,21 +30,21 @@ truncation_length = 2
 style = "bright-blue"
 format = "[$path ]($style)[$read_only]($read_only_style)"
 
-# do not put prompt character on new line
-# might revisit this in the future...
 [line_break]
 # disabled = true
 
 # show the time in the prompt
 [time]
 disabled = false
-style = "bright-black dimmed"
+# style = "bright-black dimmed" # use with all other themes
+style = "#506686" # use with electron-highlighter theme
 time_format = "[%T]"
-format = "[$time]($style)"
+format = "[$time]($style) "
 
 [git_branch]
 style = "purple"
-symbol = " "
+symbol = "git:"
+# symbol = " "
 
 [git_status]
 style = "bright-yellow"
